# beacon

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
contrib/: beacon.desktop  beacon.service
contrib/waybar/: beacon.py  style.css
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
gui/src/: main.js  style.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
src/: config.rs  daemon.rs  git.rs  history.rs  hooks.rs  mailbox.rs  main.rs  output.rs  poller.rs  queue.rs  telegram.rs  tui.rs  watcher.rs
src/providers/: github.rs  mod.rs
