[package]
name = "beacon"
version = "0.1.0"
edition = "2024"
description = "CLI tool that monitors CI/CD deploy status after git push and sends Telegram notifications"
license = "MIT"
repository = "https://github.com/Blysspeak/beacon"
keywords = ["ci", "cd", "deploy", "monitor", "telegram"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
