[package]
name = "beacon"
version = "0.4.0"
edition = "2024"
description = "Persistent CI/CD deploy monitor — auto-discovers repos, polls GitHub Actions, alerts via Telegram/Waybar/Claude Code"
license = "MIT"
repository = "https://github.com/Blysspeak/beacon"
keywords = ["ci", "cd", "deploy", "monitor", "github-actions"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
strip = true
lto = true
codegen-units = 1
